SubVersion: $Id$
	
Log:

- 14/09/2006, version 0.2.8: roms
	- splitted ROM dumping into 2 parts (prgm sending and ROM receiving) so that user can have 
		time to enter required commands
	- fixed TI73 OS sending
	- fixed TI73 version (BCD encoded)
	- fixed sending of FLASH OS on V200PLT (need to pass HW_ID).

- 04/09/2006, version 0.2.7: roms
	- fixed TI73 probing
	- added new TI89 error code (0x21: can't delete var)
	- exported ERR_ABORT value
	- fixed TI84+ battery status
	- updated/fixed TI86 dumper
	- Titanium/USB didn't have the FTS_FOLDER flag
	- correctly set up the data_type & device_type field of FlashContent when receiving app

- 26/08/2006, version 0.2.6: roms
	- checked with ValGring, tested and validated.
	
- 08/08/2006, version 0.2.5: roms
	- added TIG_BACKUP flag (needed to avoid clearing of RAM)
	- convert DUSB error packets into error message (O. Armand request)
	- convert DBUS error packets into error message (K. Kofler request)

- 18/07/2006, version 0.2.4: roms
	- added ticalcs_probe for Kevin and I. This function is complete because it handles 
		all of the probing (open/close handle, probe for all/FLASH only devices).
	- fixed TI-73 ROM dumps (untested, but the previous code definitely didn't work) (kevin)
	- fixed _FORTIFY_SOURCE and strict-aliasing warnings (kevin)
	- fixed warnings and bugs in the test program (kevin)
	- fixed "warning C4018: '<' : signed/unsigned mismatch" with MSVC

- 07/07/2006, version 0.2.3: roms
	- refresh total counter (cnt3) when sending TiGroup file
	- begins count at 1 instead of 0 (cnt3)
	- fixed filename translation in TiGroup support
	- for now, use this naming scheme for TI9x var filenames: folder.var.extension (as tifiles2).
	- look for the correct module file name on MinGW in ticalcs_library_init (kevin)

- 16/06/2006, version 0.2.2: roms
	- added full backup capability thru TiGroup files

- 11/06/2006, version 0.2.1: roms
	- reworked/added field in CalcUpdate structure (API compat broken here, again) 